aalto-xml SAX parser 2x faster than jdk's on grammar files